# hackme

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE
.cargo/: config.toml
.github/workflows/: ci.yml
src/: change.rs  cli.rs  config.rs  errors.rs  httpclient.rs  main.rs  persistence.rs  types.rs
src/template/: mod.rs  new_comments.rs
