[package]
name = "hackme"
description = "Track the submissions of a Hacker News user and notify on comments"
readme = "README.md"
repository = "https://github.com/developer-friendly/hackme"
documentation = "https://docs.rs/hackme"
authors = ["Meysam <meysam@developer-friendly.com>"]
keywords = [
  "cli",
  "productivity",
  "http",
  "terminal",
  "utility",
]
rust-version = "1.74.1"

categories = [
  "command-line-utilities",
  "web-programming",
]
include = [
  ".cargo",
  "src",
  ".gitignore",
  "Cargo.lock",
  "Cargo.toml",
  "LICENSE",
  "README.md",
]

license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "sync"] }
openssl = { version = "0.10", features = ["vendored"] }
config = "0.14"
thiserror = "2.0"
serde_json = "1"
tinytemplate = "1.1"
num_cpus = "1.16"
indicatif = "0.17.8"

[dev-dependencies]

[build-dependencies]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
